--- a/task2.html
+++ b/task2.html
@@ -1,22 +1,23 @@
 <html>
-<head>
-<title>favourite book</title>
+<head><title>MY FAVOURITE BOOKS</title>
 </head>
 <body>
-<p>A 24 year old boy seeing out from the train’s window shouted…
+<b><big>MY FAVOURITE BOOKS</b></big><br><br>
+</b><big>Top 3 Books</b></big>
+<table border="5">
+<tr><th>Book title</th><th>Author</th><th>Year Published</th></tr>
+<tr><td>to kill a mokingbird</td><td>Harper lee</td><td>1960</td></tr>
+<tr><td>1984</td><td>George Orwell</td><td>1949</td></tr>
+<tr><td>The Great Gatsby</td><td>F.scott Fitzgerald</td><td>1925</td></tr>
+</table><BR>
+<b><big><font size=5>To Kill a Mockingbird<big></font><b><br><br>
 
-“Dad, look the trees are going behind!”
-Dad smiled and a young couple sitting nearby, looked at the 24-year old’s childish behaviour with pity, suddenly he again exclaimed…
+<small>To killl a mockingbird is a novel by harper lee published in 1960.instantly successfull,widely read in high schools and middle scholls in the united states,it has become a classic of modern American literature. the plot and chaaracters are loosely basedon lees oberservation of her family,her neighbors and an event thatoccurred near her hometown of monroeville,alabama,in1936,when she was ten.</small><br><br>
 
-“Dad, look the clouds are running with us!”
+<b><big>1984</b></big><br><br>
 
-The couple couldn’t resist and said to the old man…
+<small>1984 Novel by Gerorge Orwell,published in 1949 as awarning about the menaces of totalitarianism.the chilling dystopia made a deep impression on readers,and his ideas entered mainstream culture in a 
+way achieved by very few bokks,cocepts such as big brother and the thought police are instantly recognized.the novel examines the role of truth and facts within politics and the ways in which they are manipulated.</small><br><br>
 
-“Why don’t you take your son to a good doctor?” The old man smiled and said…“I did and we are just coming from the hospital, my son was blind from birth, he just got his eyes today.”
-
-Every single person on the planet has a story. Don’t judge people before you truly know them. The truth might surprise you. </p>
-</article>
-<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p><br><br>
-
-</body>
-</html>
+<b><big>The Great Gatsby</b></big><br><br>
+<small>The Great Gatsby is a 1925 novel by american writer F.scott Fitzgerald.set in the jazz age on long island,the novel depicts narrator NICK Carraway's interactions with myseterious millionaire jay gatsby and gatsby's obsession to reunite with his former lover,daisy buchanan.a youthful romance fitzgerald had with sociualite Ginevra king and the riotousparties he attented on long island's north shore in1922 inspired the novel</small>
